mxslc/tests/data/error/bad_func_overload_2.mxsl
float foo()
{
    return 4.0 * 2.0;
}

float foo(float a = 1.0)
{
    return a * 2.0;
}

foo();
